cabal-version:       2.0
name:                aoc
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             AllRightsReserved
author:              Gilli
maintainer:          none
copyright:           2019 Gilli
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4

library
  hs-source-dirs:      src
  exposed-modules:     Aoc
                     , Ast
                     , Builtins 
                     , Conway.Ast
                     , Conway.Parser
                     , Conway.Problem
                     , Evaluator 
                     , List.Ast 
                     , List.Parser 
                     , List.Problem 
                     , Parser
                     , Program.Ast
                     , Program.Parser
                     , Program.Problem
                     , Turtle.Ast
                     , Turtle.Parser
                     , Turtle.Problem
                     , Type 
                     , TypeCheck 
                     , Value 

  build-depends:       base ^>= 4.11.1.0
                     , containers
                     , megaparsec
                     , text
                     , filepath
                     , ansi-terminal
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable aoc
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.11.1.0
                     , aoc
                     , text

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite aoc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.11.1.0
                     , aoc
                     , hspec
                     , QuickCheck
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
